--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
-        jcenter()
+//        jcenter()
         google()
     }
     dependencies {
@@ -21,7 +21,7 @@ allprojects {
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
         mavenCentral()
-        jcenter()
+//        jcenter()
     }
 }
 
