--- a/kdsp/build.gradle
+++ b/kdsp/build.gradle
@@ -8,7 +8,7 @@ repositories {
         dirs 'libs'
     }
     mavenCentral()
-    jcenter()
+//    jcenter()
     google()
 }
 
@@ -24,8 +24,8 @@ dependencies {
     //compile 'com.facebook.fresco:animated-webp:0.12.0'
     //compile 'com.facebook.fresco:webpsupport:0.12.0'
     //    compile 'com.android.support:support-v4:28.0.0-alpha1'
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
-    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.j256.ormlite:ormlite-core:5.0'
     implementation 'com.j256.ormlite:ormlite-android:5.0'
     implementation 'com.facebook.fresco:fresco:1.3.0'
