--- a/kdsp/AndroidManifest.xml
+++ b/kdsp/AndroidManifest.xml
@@ -47,6 +47,7 @@
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/app_theme_notitle">
         <activity
             android:name=".ui.activity.AppStart"
