--- a/kdsp/build.gradle
+++ b/kdsp/build.gradle
@@ -87,8 +87,8 @@ android {
         applicationId "com.qizhu.rili"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 97
-        versionName "3.14.2"
+        versionCode 99
+        versionName "3.14.3"
         flavorDimensions "versionCode"
         multiDexEnabled true
         // 默认是web的渠道
@@ -131,7 +131,7 @@ android {
 
                 variant.outputs.all {
 
-                    outputFileName = "kdsp.${defaultConfig.versionName}.${variant.productFlavors[0].name}-${variant.buildType.name}.apk"
+                    outputFileName = "kdsp.${defaultConfig.versionName}.${defaultConfig.versionCode}.${variant.productFlavors[0].name}-${variant.buildType.name}.apk"
                 }
             }
             buildConfigField "boolean", "LOG_DEBUG", "false"
